--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <title>Подсчет символов | в файле</title>
+    <title>Подсчет prompts</title>
     <meta charset="UTF-8">
 
     <link rel="stylesheet" href="bootstrap.min.css">
